--- a/index.html
+++ b/index.html
@@ -52,6 +52,62 @@
                         <img src="media/days/Day 6.png" alt="day6" class="day-img">
                         <p>ILP Day 6</p>
                     </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 7.png" alt="day7" class="day-img">
+                        <p>ILP Day 7</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 8.png" alt="day8" class="day-img">
+                        <p>ILP Day 8</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 9.png" alt="day9" class="day-img">
+                        <p>ILP Day 9</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 10.png" alt="day10" class="day-img">
+                        <p>ILP Day 10</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 11.png" alt="day11" class="day-img">
+                        <p>ILP Day 11</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 12.png" alt="day12" class="day-img">
+                        <p>ILP Day 12</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 13.png" alt="day13" class="day-img">
+                        <p>ILP Day 13</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 14.png" alt="day14" class="day-img">
+                        <p>ILP Day 14</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 15.png" alt="day15" class="day-img">
+                        <p>ILP Day 15</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 16.png" alt="day16" class="day-img">
+                        <p>ILP Day 16</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 17.png" alt="day17" class="day-img">
+                        <p>ILP Day 17</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 18.png" alt="day18" class="day-img">
+                        <p>ILP Day 18</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 19.png" alt="day19" class="day-img">
+                        <p>ILP Day 19</p>
+                    </div>
+                    <div class="day-card">
+                        <img src="media/days/Day 20.png" alt="day20" class="day-img">
+                        <p>ILP Day 20</p>
+                    </div>
                 </div>
             </div>
             <button class="prev" id="prev">&#10094;</button>
