made days.html page

--- a/days.html
+++ b/days.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILP-Recap</title>
+    <title>ILP-Recap-Days</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -21,20 +21,20 @@
     </nav>
     
     <div>
-        <img src="media/bg.png" alt="Initial Learning Program Recap" id="background">
+        <img src="media/bg-days.png" alt="Initial Learning Program Recap" id="background" style="margin-top: -50px; margin-bottom: -120px">
     </div>
 
-    <div class="dark-bg-curv" style="height: 400px;">
-        <div class="dark-daycard">
+    <div id="dark-bg-curv">
+        <div class>
             <div  class="card-slider">
                 <div class="card-container" id="card-container"></div>
             </div>
-            <button class="prev" id="prev">&#10094;</button>
-            <button class="next" id="next">&#10095;</button>    
+            <button id="prev"></button>
+            <button id="next"></button>    
         </div>
     </div>
 
-    <footer>
+    <footer style="margin-top: 0px;">
         <p>Learning. Growing. Together.</p>
     </footer>
 
