dummy data inserted

--- a/days.html
+++ b/days.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILP-Recap-Days</title>
+    <title>Days-list</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -22,6 +22,7 @@
     
     <div>
         <img src="media/bg-days.png" alt="Initial Learning Program Recap" id="background" style="margin-top: -50px; margin-bottom: -120px">
+        
     </div>
 
     <div id="dark-bg-curv">
