--- a/data.html
+++ b/data.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Days-list</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/png" href="media/fav.png">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="../data.js"></script>
-    <script src="../script.js"></script>
+    <script src="data.js"></script>
+    <script src="script.js"></script>
 </head>
 <body style="background-color: #191919;">
 
-    <nav>
+    <nav style="background-color: #191919;">
         <div class="logo">
-            <a href="../index.html"><img src="../media/logo.svg" alt="Logo"></a>
+            <a href="index.html"><img src="media/logo.svg" alt="Logo"></a>
         </div>
         <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../days.html">Days</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="days.html">Days</a></li>
             <li><a href="https://github.com/shibinshibu01/ilp-recap" target="_blank">Edit</a></li>
         </ul>
     </nav>
     
     <div>
-        <img src="../media/ilp-day-x.png" alt="Initial Learning Program Recap" id="background" style="margin-top: -50px; margin-bottom: -390px">
+        <img src="media/ilp-day-x.png" alt="Initial Learning Program Recap" id="background" style="margin-top: -50px; margin-bottom: -390px">
         <p id="day-title" class="headline">ILP Day 1</p>
     </div>
     <div id="course-container">
