--- a/days.html
+++ b/days.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="days.html">Days</a></li>
-            <li><a href="https://github.com/shibinshibu01/ilp-recap" target="_blank">Edit</a></li>
+            <li><a href="https://github.com/shibinshibu01/ilp-recap/edit/main/data.js" target="_blank">Edit</a></li>
         </ul>
     </nav>
     
