--- a/data.html
+++ b/data.html
@@ -24,7 +24,7 @@
     </nav>
     
     <div>
-        <img src="media/ilp-day-x.png" alt="Initial Learning Program Recap" id="background" style="margin-top: -50px; margin-bottom: -390px">
+        <img src="media/ilp-day-x.png" alt="Initial Learning Program Recap" id="background-day" style="margin-top: -50px; margin-bottom: -390px; background-color: #191919;">
         <p id="day-title" class="headline">ILP Day 1</p>
     </div>
     <div id="course-container">
