--- a/days.html
+++ b/days.html
@@ -21,9 +21,9 @@
         </ul>
     </nav>
     
-    <div>
-        <img src="media/bg-days.png" alt="Initial Learning Program Recap" id="background" style="margin-top: -50px; margin-bottom: -120px">
-        
+    <div id="background-day" class="background-day">
+        <img src="media/bg-days.png" alt="Initial Learning Program Recap" id="background-day" style="margin-top: -50px; margin-bottom: -120px">
+        <p id="day-title" class="headline2" class="headline">Days</p>
     </div>
 
     <div id="dark-bg-curv">
